--- a/college_connect/pubspec.yaml
+++ b/college_connect/pubspec.yaml
@@ -51,6 +51,8 @@ dev_dependencies:
   firebase_storage: ^11.1.0
   cloud_firestore: ^4.5.0
   fluttertoast: ^8.2.1
+  http: ^0.13.5
+  gsheets: ^0.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
