--- a/college_connect/pubspec.yaml
+++ b/college_connect/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   fluttertoast: ^8.2.1
   http: ^0.13.5
   gsheets: ^0.4.2
+  google_fonts: ^2.1.0 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
