--- a/college_connect/android/app/build.gradle
+++ b/college_connect/android/app/build.gradle
@@ -65,6 +65,16 @@ android {
 flutter {
     source '../..'
 }
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "27.1.1"
+            }
+        }
+    }
+}
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
