--- a/college_connect/pubspec.yaml
+++ b/college_connect/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   http: ^0.13.5
   gsheets: ^0.4.2
   google_fonts: ^2.1.0 
+  url_launcher: ^6.1.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
