--- a/college_connect/pubspec.yaml
+++ b/college_connect/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
   google_fonts: ^2.1.0 
   url_launcher: ^6.1.10
   flutter_file_downloader: ^1.1.2
+  google_maps_flutter: ^2.2.6
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
